# audioproc

./: CMakeLists.txt  FileServer.cpp  FileServer.h  MediaIn.cpp  MediaIn.h  MediaOut.cpp  MediaOut.h  MediaPacket.cpp  MediaPacket.h  Queue.cpp  Queue.h  README.md  audioproc.cpp  defs.h  env.cmake  museffmpeg.sh  muselive.sh  musesource.sh
httpd/inc/: Makefile.in
httpd/lib/: libhttpserver.so.0.18.1
src/: FileServer.cpp  FileServer.h  MediaIn.cpp  MediaIn.h  MediaOut.cpp  MediaPacket.h  Queue.cpp  audioproc.cpp  defs.h  mediaproc.cpp
web/: CMakeLists.txt  apple-app-site-association  assetlinks.json  build_ffmpeg_wasm.sh  build_h264wasm.sh  build_player_wasm.sh  decoder.js  index.html  main.js  mainplayer.js  mainuicontroller.js  player.html  uicontrol.js
web/cpp/: download.cpp  main.cpp  main.h  remux.cpp  utils.cpp
web/ffmpeg_arm/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc
web/ffmpeg_x86/include/libavutil/: mem.h
web/ffmpeg_x86/lib/pkgconfig/: libswscale.pc
web/h264/: download.cpp  main.cpp  main.h  remux.cpp  utils.cpp
web/js/: api.js  consts.js  global.js  muxer_x86.js  player.js  print.js  remuxer.js  util.js
web/styles/: style.css  unityStyle.css
web/superStreamSDK/: h264muxer_arm.js  h264muxer_x86.js  h264player.js  h264webgl.js  remuxer.js  superStreamPlayerSDK.js  superstreamapi.js  superstreamconnect.js  superstreamglobal.js  util.js
